feat: implementa rotas de autenticação
* feat: implementa versão inicial da rota de cadastro

* refactor: substitui validação manual por validação com Zod

* refactor: melhora tratamento de erros na aplicação

* feat: cria rota para realizar login

* feat: implementa criptografia de senha e retorno de jwt na rota de login
