# swagger.yaml
@@ -8,7 +8,6 @@ servers:
   - url: http://localhost:8080
 
 components:
-
   securitySchemes:
     bearerAuth:
       type: http
@@ -16,7 +15,6 @@ components:
       bearerFormat: JWT
 
   schemas:
-
     Usuario:
       type: object
       properties:
@@ -160,7 +158,8 @@ components:
           type: array
           items:
             type: string
-          example: ["https://example.com/image1.jpg", "https://example.com/image2.jpg"]
+          example:
+            ['https://example.com/image1.jpg', 'https://example.com/image2.jpg']
 
     ProjetoDetail:
       type: object
@@ -255,7 +254,8 @@ components:
           type: array
           items:
             type: string
-          example: ["https://example.com/image1.jpg", "https://example.com/image2.jpg"]
+          example:
+            ['https://example.com/image1.jpg', 'https://example.com/image2.jpg']
 
     ReuniaoResponse:
       type: object
@@ -387,8 +387,7 @@ components:
           items:
             $ref: '#/components/schemas/IntegranteProjeto'
 paths:
-
-  /api/v1/cadastrar:
+  /api/v1/auth/cadastrar:
     post:
       tags:
         - Autenticação
@@ -414,13 +413,12 @@ paths:
                   type: string
                   example: nathan@email.com
                   maxLength: 150
-                  minLength: 3
+                  minLength: 6
                 senha:
                   type: string
                   example: 12345678
                   maxLength: 64
                   minLength: 8
-
 
       responses:
         '201':
@@ -430,15 +428,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Usuario'
 
-        '409':
-          description: Usuário já existe
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Erro'
-
         '400':
-          description: Requisição mal formulada
+          description: Requisição mal formulada ou usuário com o e-mail informado já existente
           content:
             application/json:
               schema:
@@ -458,7 +449,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Erro'
 
-  /api/v1/login:
+  /api/v1/auth/login:
     post:
       tags:
         - Autenticação
@@ -478,10 +469,10 @@ paths:
                   type: string
                   example: nathan@email.com
                   maxLength: 150
-                  minLength: 3
+                  minLength: 6
                 senha:
                   type: string
-                  example: 123456
+                  example: 12345678
                   maxLength: 64
                   minLength: 8
 
